[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://green_sliderLeft.png" type="Texture" id=2]
[ext_resource path="res://green_sliderRight.png" type="Texture" id=3]
[ext_resource path="res://treeDex.gd" type="Script" id=4]

[node name="treeDex" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.749146
margin_right = 0.749146
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1023.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree_Art" type="Sprite" parent="."]
position = Vector2( 245.795, 249.503 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="exit_button" type="Button" parent="."]
margin_left = 414.878
margin_top = 532.878
margin_right = 631.878
margin_bottom = 598.878
text = "Exit Dex"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" type="Button" parent="."]
margin_top = 543.0
margin_right = 74.0
margin_bottom = 599.0
rect_pivot_offset = Vector2( 199.542, 28 )
icon = ExtResource( 2 )
flat = true
expand_icon = true

[node name="next_button" type="Button" parent="."]
margin_left = 945.0
margin_top = 538.0
margin_right = 1021.0
margin_bottom = 600.0
icon = ExtResource( 3 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tree_id" type="Label" parent="."]
margin_left = 492.0
margin_right = 760.0
margin_bottom = 100.0
text = "Tree # "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tree_name" type="Label" parent="."]
margin_left = 760.0
margin_right = 1021.0
margin_bottom = 100.0
text = "Tree Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tree_description" type="Label" parent="."]
margin_left = 507.584
margin_top = 177.357
margin_right = 1012.58
margin_bottom = 385.357
text = "Tree Description"
align = 1
valign = 1

[node name="tree_properties" type="Label" parent="."]
margin_left = 64.8215
margin_top = 418.286
margin_right = 962.822
margin_bottom = 524.286
text = "Tree Properties (Maybe visuals)"
align = 1
valign = 1
[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="next_button" to="." method="_on_next_button_pressed"]
